--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,28 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.top{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color:rgb(255, 156, 96);
 }
-
-.App-link {
-  color: #61dafb;
+.main1{
+  margin-left: 25px;
+  margin-top: 15px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main2{
+  margin-left: 25px;
+  margin-top:15px;
+}
+.main3{
+  margin-left: 40%;
+  margin-top: 10px;
+}
+.main4{
+  margin-left: 10px;
+  margin-top: 10px;
+}
+.main5{
+  margin-left: 40%;
+  margin-top: 10px;
+}
+.main6{
+  margin-left: 10px;
+  margin-top: 10px;
 }
